// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountRepository should create 1`] = `
Account {
  "_created": 2020-01-01T07:00:00.000Z,
  "_email": "email@lindorm.io",
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "account_created",
      "payload": Object {
        "created": 2020-01-01T07:00:00.000Z,
        "email": "email@lindorm.io",
        "otp": Object {
          "signature": "c2lnbmF0dXJl",
          "uri": "https://lindorm.io/",
        },
        "password": Object {
          "signature": "c2lnbmF0dXJl",
          "updated": 2020-01-01T07:00:00.000Z,
        },
        "permission": "locked",
        "updated": 2020-01-01T07:00:00.000Z,
      },
    },
  ],
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_identityLinked": false,
  "_otp": Object {
    "signature": "c2lnbmF0dXJl",
    "uri": "https://lindorm.io/",
  },
  "_password": Object {
    "signature": "c2lnbmF0dXJl",
    "updated": 2020-01-01T07:00:00.000Z,
  },
  "_permission": "locked",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
}
`;

exports[`AccountRepository should find 1`] = `
Account {
  "_created": 2020-01-01T07:00:00.000Z,
  "_email": "email@lindorm.io",
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "account_created",
      "payload": Object {
        "created": 2020-01-01T07:00:00.000Z,
        "email": "email@lindorm.io",
        "otp": Object {
          "signature": "c2lnbmF0dXJl",
          "uri": "https://lindorm.io/",
        },
        "password": Object {
          "signature": "c2lnbmF0dXJl",
          "updated": 2020-01-01T07:00:00.000Z,
        },
        "permission": "locked",
        "updated": 2020-01-01T07:00:00.000Z,
      },
    },
  ],
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_identityLinked": false,
  "_otp": Object {
    "signature": "c2lnbmF0dXJl",
    "uri": "https://lindorm.io/",
  },
  "_password": Object {
    "signature": "c2lnbmF0dXJl",
    "updated": 2020-01-01T07:00:00.000Z,
  },
  "_permission": "locked",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
}
`;

exports[`AccountRepository should find many 1`] = `
Array [
  Account {
    "_created": 2020-01-01T07:00:00.000Z,
    "_email": "email@lindorm.io",
    "_events": Array [
      Object {
        "date": 2020-01-01T07:00:00.000Z,
        "name": "account_created",
        "payload": Object {
          "created": 2020-01-01T07:00:00.000Z,
          "email": "email@lindorm.io",
          "otp": Object {
            "signature": "c2lnbmF0dXJl",
            "uri": "https://lindorm.io/",
          },
          "password": Object {
            "signature": "c2lnbmF0dXJl",
            "updated": 2020-01-01T07:00:00.000Z,
          },
          "permission": "locked",
          "updated": 2020-01-01T07:00:00.000Z,
        },
      },
    ],
    "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
    "_identityLinked": false,
    "_otp": Object {
      "signature": "c2lnbmF0dXJl",
      "uri": "https://lindorm.io/",
    },
    "_password": Object {
      "signature": "c2lnbmF0dXJl",
      "updated": 2020-01-01T07:00:00.000Z,
    },
    "_permission": "locked",
    "_updated": 2020-01-01T07:00:00.000Z,
    "_version": 0,
  },
  Account {
    "_created": 2020-01-01T07:00:00.000Z,
    "_email": "other@lindorm.io",
    "_events": Array [
      Object {
        "date": 2020-01-01T07:00:00.000Z,
        "name": "account_created",
        "payload": Object {
          "created": 2020-01-01T07:00:00.000Z,
          "email": "other@lindorm.io",
          "otp": Object {
            "signature": null,
            "uri": null,
          },
          "password": Object {
            "signature": null,
            "updated": null,
          },
          "permission": "locked",
          "updated": 2020-01-01T07:00:00.000Z,
        },
      },
    ],
    "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
    "_identityLinked": false,
    "_otp": Object {
      "signature": null,
      "uri": null,
    },
    "_password": Object {
      "signature": null,
      "updated": null,
    },
    "_permission": "locked",
    "_updated": 2020-01-01T07:00:00.000Z,
    "_version": 0,
  },
]
`;

exports[`AccountRepository should update 1`] = `
Account {
  "_created": 2020-01-01T07:00:00.000Z,
  "_email": "email@lindorm.io",
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "account_created",
      "payload": Object {
        "created": 2020-01-01T07:00:00.000Z,
        "email": "email@lindorm.io",
        "otp": Object {
          "signature": "c2lnbmF0dXJl",
          "uri": "https://lindorm.io/",
        },
        "password": Object {
          "signature": "c2lnbmF0dXJl",
          "updated": 2020-01-01T07:00:00.000Z,
        },
        "permission": "locked",
        "updated": 2020-01-01T07:00:00.000Z,
      },
    },
  ],
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_identityLinked": false,
  "_otp": Object {
    "signature": "c2lnbmF0dXJl",
    "uri": "https://lindorm.io/",
  },
  "_password": Object {
    "signature": "c2lnbmF0dXJl",
    "updated": 2020-01-01T07:00:00.000Z,
  },
  "_permission": "locked",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 1,
}
`;
